--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.0",
+    "bootstrap-social": "^5.1.1",
+    "font-awesome": "^4.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-particles-js": "^3.5.3",
+    "react-redux": "^7.2.4",
+    "react-redux-form": "^1.16.14",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-simple-image-slider": "^2.1.2",
     "react-typed": "^1.2.0",
+    "reactstrap": "^8.9.0",
+    "redux": "^4.1.1",
     "tsparticles": "^1.34.0",
     "web-vitals": "^1.0.1"
   },
