--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://BorhaneddineHamadou.github.io/Potfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -11,10 +12,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.0",
     "bootstrap-social": "^5.1.1",
     "emailjs-com": "^3.2.0",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^3.2.3",
     "pdfjs-dist": "2.6.347",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -31,6 +34,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
